syntax = "proto3";

package userpb;

option go_package = "delivery-proto/userpb";

service UserService {
  rpc GetUserByEmail (GetUserByEmailRequest) returns (UserResponse);
  rpc GetUserByID (GetUserByIDRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message User {
  int32 id = 1;
  string email = 2;
  string password = 3;
  string nombre_completo = 4;
  string role = 5;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByIDRequest {
  int32 id = 1;
}

message UserResponse {
  User user = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string nombre_completo = 3;
  string rol = 4;
}

message CreateUserResponse {
  int64 user_id = 1;
  string email = 2;
  string role = 3;
  string nombre_completo = 4;
  string telefono = 5;
}
